# gpt3forchem

./: .bumpversion.cfg  .gitignore  .gitmodules  CONTRIBUTING.rst  README.md  _quarto.yml  api_wrappers.html  baselines.html  data.html  index.html  index.ipynb  input.html  output.html  robots.txt  search.json  settings.ini  setup.cfg  sidebar.yml  sitemap.xml
legacy/: .cruft.json  README.md  setup.cfg
legacy/.github/workflows/: release.yml
legacy/docs/source/: index.rst  installation.rst
legacy/experiments/extrapolation/: 20220718_extrapolation.ipynb
legacy/experiments/extrapolation/run_files/: 2022-07-18-17-21-58_train_mof_mulitoutput_2933.jsonl  2022-07-18-17-21-58_valid_mof_mulitoutput_213.jsonl  2022-07-19-08-57-58_train_mof_mulitoutput_940.jsonl  2022-07-19-08-57-58_valid_mof_mulitoutput_42.jsonl  2022-07-19-08-59-14_train_mof_mulitoutput_1634.jsonl  2022-07-19-08-59-14_valid_mof_mulitoutput_95.jsonl  2022-07-19-10-17-56_train_mof_mulitoutput_1878.jsonl  2022-07-19-10-17-56_valid_mof_mulitoutput_44.jsonl  2022-07-21-10-21-45_train_mof_mulitoutput_1937.jsonl  2022-07-21-10-21-45_valid_mof_mulitoutput_45.jsonl  2022-07-21-11-05-06_train_mof_mulitoutput_1420.jsonl  2022-07-21-11-05-06_valid_mof_mulitoutput_49.jsonl  2022-07-21-11-55-29_train_mof_mulitoutput_366.jsonl  2022-07-21-11-55-29_valid_mof_mulitoutput_11.jsonl  2022-07-21-12-09-51_train_mof_mulitoutput_407.jsonl  2022-07-21-12-09-51_valid_mof_mulitoutput_10.jsonl  2022-07-21-13-50-18_train_mof_mulitoutput_396.jsonl  2022-07-21-13-50-18_valid_mof_mulitoutput_11.jsonl  2022-07-21-14-30-09_train_mof_mulitoutput_404.jsonl  2022-07-21-14-30-09_valid_mof_mulitoutput_4.jsonl
legacy/experiments/mofs/run_files/: 2022-06-26-11-39-27_train_prompts_mof_100.jsonl  2022-06-26-11-39-27_valid_prompts_mof_6324.jsonl  2022-06-26-16-58-39_train_prompts_mof_500.jsonl  2022-06-26-16-58-39_valid_prompts_mof_3177.jsonl  2022-06-26-21-27-33_train_prompts_mof_2000.jsonl  2022-06-26-21-27-33_validsmall_prompts_mof_1375.jsonl  2022-06-26-22-06-04_train_prompts_mof_2000.jsonl  2022-06-26-22-06-04_valid_prompts_mof_1375.jsonl  2022-06-27-11-09-14_train_prompts_mof_100.jsonl  2022-06-27-11-09-14_valid_prompts_mof_3275.jsonl  2022-06-27-11-09-14_validsmall_prompts_mof_3275.jsonl  2022-06-27-15-09-09_train_prompts_mof_200.jsonl  2022-06-27-15-09-09_valid_prompts_mof_3175.jsonl  2022-06-27-17-17-52_train_prompts_mof_500.jsonl  2022-06-27-17-17-52_validsmall_prompts_mof_2875.jsonl  2022-06-28-11-11-57_train_prompts_mof_2000.jsonl  (+4 more)
legacy/experiments/molecules/: 20220701_molecule_logp_finetune_forward.ipynb  20220701_plot_smiles_results.ipynb  20220718_analysis_inverse.ipynb  20220718_inverse_logP.ipynb
legacy/experiments/polymers/: 20220624_inverse_polymer.ipynb  20220627_delta_g_model.ipynb  20220627_inverse_polymer_analysis.ipynb
legacy/src/gpt3forchem/: __init__.py  analysis.py  version.py
legacy/src/gpt3forchem/mofs/: constants.py  (+1 more)
legacy/tests/: test_analysis.py  test_version.py
(+16670 files in other folders)
