##########################
# Setup.py Configuration #
##########################
[metadata]
name = gpt3forchem
version = 0.0.1-dev
description = Fine tune gpt3 for applications in chemistry and materials science 
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/gpt3forchem
download_url = https://github.com/kjappelbaum/gpt3forchem/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/gpt3forchem/issues
    Source Code = https://github.com/kjappelbaum/gpt3forchem

# Author information
author = Kevin M. Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin M. Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =

[options]
install_requires =
    openai
    pandas
    xgboost 
    wandb
    optuna
    pycm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    gpt3forchem = gpt3forchem.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = gpt3forchem
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/gpt3forchem
    .tox/*/lib/python*/site-packages/gpt3forchem

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
